Gallery stretched images css fix

--- a/css/base.css
+++ b/css/base.css
@@ -1268,12 +1268,19 @@ html{
     -o-transition: all 300ms ease;
 }
 .b-mainGallery__item>img{
-    width: 237px;
+    position: relative;
+    left: 50%;
+    width: auto;
+/*    width: 237px;*/
     height: 200px;
-    transition: transform 300ms ease;
+    -webkit-transform: scale(1) translateX(-50%);
+    -ms-transform: scale(1) translateX(-50%);
+    -o-transform: scale(1) translateX(-50%);
+    transform: scale(1) translateX(-50%);
     -moz-transition: -moz-transform 300ms ease;
     -webkit-transition: -webkit-transform 300ms ease;
     -o-transition: -o-transform 300ms ease;
+    transition: transform 300ms ease;
 }
 .b-mainGallery__icon{
     display: table;
@@ -1288,7 +1295,7 @@ html{
     left: 3.5%;
 }
 .b-mainGallery__item:hover>img{
-    transform: scale(1.025);
+    transform: scale(1.025) translateX(-48.7%);
 }
 .b-mainGallery__item:hover .b-mainGallery__overlay{
     background-color: rgba(0,0,0,0.3);
